# GPUFeatureExtraction

./: GPUBase.cpp  GPUBase.h  GPUFeatureExtraction.sln  GPUFeatureExtraction.vcxproj  GPUFeatureExtraction.vcxproj.filters  GPUImageProcessor.cpp  GPUImageProcessor.h  GPUTransferManager.cpp  GPUTransferManager.h  Moments.cpp  Moments.h  Moments.sdf  Moments.sln  README  SIFT.cl  SIFT.cpp  SIFT.h  SdkConsoleLog.txt  imgfeatures.h  main.cpp  oclScan_vc9.sdf  oclScan_vc9.sln.old  oclScan_vc9.vcproj  oclScan_vc9.vcxproj  oclScan_vc9.vcxproj.filters  sift2.cpp  sift2.h
CL/: DilateFilter.cl  ErodeFilter.cl  GPUCode.cl  HighpassFilter.cl  IntegralImage.cl  (+2 more)
GPU/: AssignOrientations.cpp  AssignOrientations.h  CMakeLists.txt  ContextFilter.cpp  ContextFilter.h  ContextFreeFilter.cpp  ContextFreeFilter.h  DetectExtrema.cpp  DetectExtrema.h  ExtractKeypointDescriptors.cpp  ExtractKeypointDescriptors.h  Filter.cpp  Filter.h  HighpassFilter.cpp  HighpassFilter.h  LinearFilter.cpp  LinearFilter.h  LowpassFilter.cpp  LowpassFilter.h  Magnitude.cpp  Magnitude.h  MagnitudeOrientation.cpp  MagnitudeOrientation.h  MeanFilter.cpp  MeanFilter.h  NonLinearFilter.cpp  NonLinearFilter.h  Orientation.cpp  Orientation.h  Subtract.cpp  Subtract.h  Transformation.cpp  Transformation.h
GPU/OpenCL/: 1.ir  AssignOrientations.cl  Binarization.cl  BlurGaussFilter.cl  DetectExtrema.cl  DilateFilter.cl  ErodeFilter.cl  ExtractKeypointDescriptors.cl  GPUCode.cl  HighpassFilter.cl  LUTFilter.cl  LowpassFilter.cl  Magnitude.cl  MaxFilter.cl  MedianFilter.cl  MinFilter.cl  Orientation.cl  Subtract.cl
(+29 files in other folders)
